# embodied-ai

examples/camera-calibration/: CMakeLists.txt
examples/camera-calibration/source/: CMakeLists.txt
examples/featurepoint-extraction-and-matching/: CMakeLists.txt
examples/featurepoint-extraction-and-matching/source/: CMakeLists.txt  main.cpp
examples/safe-guard/: CMakeLists.txt  README.md
examples/safe-guard/source/: CMakeLists.txt  main.cpp
examples/structure-from-motion/: .gitignore  CMakeLists.txt
examples/structure-from-motion/source/: CMakeLists.txt  main.cpp
examples/video-frame-extractor/: CMakeLists.txt
examples/video-frame-extractor/source/: CMakeLists.txt  main.cpp
